# clang-unformat

./: .clang-format  .gitignore  CMakeLists.txt  README.md
standalone/: application.cpp  application.hpp  clang_format.cpp  clang_format.hpp  cli_config.cpp  cli_config.hpp  levenshtein.cpp  levenshtein.hpp  main.cpp
